# funny

./: Cargo.toml  Intro.md  README.md
doc/: General.md  Grammar.md  Lambda.md  Plan.md  README.md
doc/Base/: README.md
doc/Base/Trait/: Show.md
doc/Base/Type/: Bool.md  List.md  Maybe.md  Pair.md  Result.md  String.md
examples/: basic.fun
src/: ast.rs  char_stream.rs  main.rs
src/ast/: mod.rs
src/cmd/: def.rs  run.rs
src/command/: mod.rs  run.rs
src/compiler/: ast.rs  lexer.rs  mod.rs  parser.rs  syntax.rs  token.rs
src/core/: mod.rs
src/run/: mod.rs
