[package]
name = "funny"
version = "0.0.1-alpha"
authors = ["Viktor A. Rozenko Voitenko <sharp.vik@gmail.com>"]
edition = "2018"
description = "Funny Programming Language"
readme = "README.md"
license = "MIT"
repository = "https://github.com/fun-lan/funny/"

[dependencies]
clap = "2.33.3"
idioma = "0.0.3"
